Several fixes & polish
 - Fixed wrong background texture.
 - Fixed inactive tabs rendering too far left, and tab icon alignment.
 - Fixed various vertical alignment issues due to line-height.
 - Fixed re-renders briefly showing the warnings dialog and making the screen flash.
 - Centred attunement input.
 - Fixed missing min width and height.
 - Fixed dark mode header texture rendering above header input elements in edit mode.
 - Adjusted spacing between sheet header and body.
 - Removed excess padding around sheet body.
 - Fixed missing active tab underline on items & activity sheets.
 - Fixed rendering of encumbrance bar & child creation button.
 - Fixed missing item-list-controls filters.

--- a/less/v2/inventory.less
+++ b/less/v2/inventory.less
@@ -146,7 +146,7 @@
 
       input.max {
         width: 22px;
-        text-align: left;
+        text-align: center;
         font-weight: bold;
         background: var(--dnd5e-background-5);
         border: none;
